# vectrl_proto

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
controller/arduino_serial_proto/: arduino_serial_proto.ino
src/: actions.cpp  actions.h  actions_mac.mm  actions_win.cpp  config_loader.cpp  config_loader.h  main.cpp  main_frame.cpp  main_frame.h  serial.cpp  serial.h  thread_utils.cpp  thread_utils.h  ui_common.h  usb.cpp  usb.h
src/common/: actions.cpp  actions.h  actions_mac.mm  actions_win.cpp  thread_utils.h
src/config/: config_loader.cpp  config_loader.h  controller_description.cpp  controller_description.h
src/device/: usb.h
src/ui/: button_setup_panel.cpp  button_setup_panel.h  main_frame.cpp  main_frame.h  ui_common.h
